src/index.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* Navbar.css  */
.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  background-color: #4f5d4f;
  border-bottom: 1px solid #ddd;
  height: 60px;
}

.navbar img {
  height: 3.1cm;
  max-width: 207px;
  object-fit: contain;

}


.burger-menu {
  cursor: pointer;
  font-size: 24px;
}

.slider-container {
  width: 100%;
  height: auto;
  overflow: hidden;
  position: relative;
  margin: 0;
  
}

.slider {
  display: flex;
  transition: transform 0.5s ease-in-out;
 
  
}

.slider img {
  width: 100%;
  height: auto;
  flex: 1 0 100%;
  object-fit: cover;
}

button.prev, button.next {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  border: none;
  padding: 10px;
  cursor: pointer;
  z-index: 1;
}

button.prev {
  left: 10px;
}

button.next {
  right: 10px;
}

.about-container {
  font-family: 'Poppins', sans-serif;
  padding: 20px;
  margin: 10px 10px 10px 10px;
}

.get-estimate-btn {
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
  background-color: white;
  color:  #4f5d4f;
  border: 2px solid #4f5d4f;
  padding: 10px 20px;
  cursor: pointer;
  height: 1.5cm; /* Ensure the button is at least 2 cm high */
  font-size: 16px;
  border-radius: 10px;
  transition: background-color 0.3s ease;
  margin: 0px 20px 25px 20px;
}

.get-estimate-btn:hover {
  background-color: white;
}

